--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
-# contact_links:
-#   - name: Blank issue
-#     url: https://discord.gg/5CceB5Y6Zt
-#     about: Use this blank template only if the prevoius templates do not apply to your issue or question.
+contact_links:
+  - name: Blank issue
+    url: https://github.com/Piero24/TelegramBot-AmazonOffers/issues/new
+    about: Use this blank template only if the prevoius templates do not apply to your issue or question.
